(#5442) PR feedback